--- a/main.html
+++ b/main.html
@@ -52,10 +52,19 @@
                                 <li><a href="#">BOARD</a></li>
                                 <li><a href="#">NOTICE</a></li>
                                 <li><a href="#">ABOUT</a></li>
+                                <input type="search" value="검색">
                             </ul>
                     </div>
                 </div>
         </div>
+        <div>배너들어갈 자리</div>
+        <div>카테고리
+            <div>
+
+            </div>
+        </div>
+        <div>상품 나열</div>
+        <div>푸터자리</div>
     </header>
    <!--//Header-->
     
